	the duplicates, and join them with line continuation characters.

	* bin/create-mail-aliases: Make chunks of ten addresses per rule.

	* bin/po-register: Grr... -- programming is difficult.

	* registry/registry.sgml: Cleanups.

	* Makefile: Rename 'tarballs/' to 'bundles/', and return to the old,
	incorrect name for the 'tp-robot' package for now.

2007-06-29  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, bin/po-register: Stop making symlinks in packages/.

	* registry/registry.sgml: Whitespace adjustments after removal of
	nano_1_0 assignments.

	* lib/run.py: Continue when encoding fails; better send a messed up
	mail than no mail at all.  This is just a workaround for an error
	seen in the logs: """UnicodeEncodeError: 'ascii' codec can't encode
	character u'\xe1' in position 234: ordinal not in range(128)"""

	* bin/po-matrix, Makefile, webgen/layout.html.in:
	Generate the matrices again, and link to the html one.

	* bin/tp-robot: Clarify the acception of files for unassigned domains.

	* bin/po-register: Do not falter when a PO file is submitted by an
	unassigned translator.

	* bin/*: Tell SVN that most of these should stay executable.

	* lib/messages/*.po: Adapt URLs and email addresses to the latest.

	* webgen/maintainers.all: Use the coordinator@ email address.

2007-06-28  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/layout.html.in: Tell webspiders they are welcome now
	that the site is going live.

	* lib/config.py, webgen/layout.html.in: Change the colour of the
	website title banner, to clearly mark the site switch.

	* bin/tp-robot, lib/config.py, webgen/maintainers.all,
	webgen/translators.all, webgen/leaders.all, README:
	Remove the unneeded "www."; it makes for cleaner URLs.

	* bin/po-register: Add the path for 'calc-postats' to PATH,
	so it can be found also when being run by cron.

	* bin/create-mail-aliases: Use many short lines, not one long one.

	* bin/po-register: Fix path to 'calc-postats' correctly this time,