@@ -1,7 +1,7 @@
 <!doctype HTML PUBLIC  "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
  <head>
-  <title>Welcome at the Translation Project</title>
+  <title>Welcome to the Translation Project</title>
  </head>
  <body>
 
