@@ -13,6 +13,8 @@
 	* Makefile: Rename 'tarballs/' to 'bundles/', and return to the old,
 	incorrect name for the 'tp-robot' package for now.
 
+	* Makefile: Don't send emails to Bruno Haible about matrices any more.
+
 2007-06-29  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* lib/config.py, bin/po-register: Stop making symlinks in packages/.
